[package]
name = "daraja-sdk"
version = "0.1.0"
edition = "2024"
description = "A memory-safe Rust SDK for Safaricom Daraja (M-Pesa API 3.0)"
authors = ["Stanley Masinde <hello@stanleymasinde.com>"]
readme = "README.md"
keywords = ["mpesa", "daraja", "safaricom", "kenya", "payments", "mobile-money"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.13.4", features = ['json'] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
toml = "1.1.2"
