[package]
name = "daraja-sdk"
version = "0.2.0"
edition = "2024"
description = "A memory-safe Rust SDK for Safaricom Daraja (M-Pesa API 3.0)"
authors = ["Stanley Masinde <hello@stanleymasinde.com>"]
license = "MIT"
readme = "README.md"
keywords = ["mpesa", "daraja", "safaricom", "kenya", "mobile-money"]
categories = ["api-bindings", "web-programming::http-client"]
repository = "https://github.com/StanleyMasinde/daraja-sdk"
homepage = "https://github.com/StanleyMasinde/daraja-sdk"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
reqwest = { version = "0.13.4", features = ['json'] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.5.8"

[dev-dependencies]
toml = "1.1.2"
